code refactoring and routes connections

--- a/views/partials/signature_form.handlebars
+++ b/views/partials/signature_form.handlebars
@@ -1,7 +1,9 @@
 <form id="signature-form" action="/petition" method="post">
-    <input type="text" name="fname" placeholder="First Name" required>
-    <input type="text" name="lname" placeholder="Last Name" required>
+    <input type="text" name="first_name" placeholder="First Name" required>
+    <input type="text" name="last_name" placeholder="Last Name" required>
     <input type="text" name="email" placeholder="Email Address" required>
+    <input type="hidden" name="signature" required>
+    <!-- <input type="hidden" name="_csrf" value={{csrfToken}}> -->
     <div id="signature-container"></div>
     <button type="submit" name="submit">Send</button>
 </form>
