--- a/views/petition.handlebars
+++ b/views/petition.handlebars
@@ -1,4 +1,9 @@
-<main>
+<main class="nes-container is-dark is-rounded is-centered with-title">
+    <p class="title">Save Ghosts from Pacman!</p>
+    {{> characters}}
+    <div class="nes-container is-dark is-rounded">
+        Every morning in a vintage game, a Ghost wakes up. It knows it must run faster than Pacman or it will be killed. Since years, this yellow character addicted to digital pills haunts the dreams of poor Ghosts (funny...). Help us so that this can stop.
+    </div>
     {{#if error}}
         {{> signature_error}}
     {{/if}}
