--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -3,8 +3,13 @@
     <head>
         <meta charset="utf-8">
         <title>Petition</title>
-        <script src="./js/jquery-3.4.1.min.js" charset="utf-8"></script>
-        <script src="./js/p5.min.js" charset="utf-8"></script>
+        <base href="/">
+        <link href="https://fonts.googleapis.com/css?family=Press+Start+2P" rel="stylesheet">
+        <link rel="stylesheet" href="/css/nes.min.css">
+        <link rel="stylesheet" href="/css/characters.css">
+        <link rel="stylesheet" href="/css/style.css">
+        <script src="/js/jquery-3.4.1.min.js" charset="utf-8"></script>
+        <script src="/js/p5.min.js" charset="utf-8"></script>
     </head>
     {{{body}}}
 </html>
