--- a/views/partials/signature_form.handlebars
+++ b/views/partials/signature_form.handlebars
@@ -1,10 +1,10 @@
-<form id="signature-form" action="/petition" method="post">
-    <input type="text" name="first_name" placeholder="First Name" required>
-    <input type="text" name="last_name" placeholder="Last Name" required>
-    <input type="text" name="email" placeholder="Email Address" required>
-    <input type="hidden" name="signature" required>
-    <input type="hidden" name="_csrf" value={{csrfToken}}>
-    <div id="signature-container"></div>
-    <button type="submit" name="submit">Send</button>
+<form action="/petition" method="post">
+    <input class="nes-input" type="text" name="first_name" placeholder="First Name" required>
+    <input class="nes-input" type="text" name="last_name" placeholder="Last Name" required>
+    <input class="nes-input" type="text" name="email" placeholder="Email Address" required>
+    <input class="nes-input" type="hidden" name="signature" required>
+    <input class="nes-input" type="hidden" name="_csrf" value={{csrfToken}}>
+    <div id="signature-container" class="nes-pointer"></div>
+    <button class="nes-btn is-primary" type="submit" name="submit">Send</button>
 </form>
-<script src="./js/signature.js" charset="utf-8"></script>
+<script src="/js/signature.js" charset="utf-8"></script>
