--- a/views/thanks.handlebars
+++ b/views/thanks.handlebars
@@ -1,4 +1,5 @@
-<main>
+<main class="nes-container is-dark is-rounded is-centered with-title flex-center">
     <h1>Thanks!!</h1>
     <a href="/signers">signers list</a>
+    <img id="signature-img" src={{signature}}>
 </main>
