--- a/views/partials/error.handlebars
+++ b/views/partials/error.handlebars
@@ -1,3 +1,3 @@
-<div id="nes-continer signature-error">
+<div class="nes-continer signature-error">
     <p>Something went wrong. Please try again.</p>
 </div>
