--- a/views/signers.handlebars
+++ b/views/signers.handlebars
@@ -4,7 +4,8 @@
         <div class="message -left">
             <i class="nes-bcrikko"></i>
             <div class="nes-balloon from-left black-text">
-              <p>I'm {{this.first_name}}, {{this.last_name}}</p>
+              <p>I'm {{this.first_name}}, {{this.last_name}}!</p>
+              <a href="signers/{{this.city}}">{{this.city}}</a>
             </div>
         </div>
         {{/each}}
