--- a/views/profile.handlebars
+++ b/views/profile.handlebars
@@ -11,4 +11,5 @@
         <input class="nes-input" type="hidden" name="_csrf" value={{csrfToken}}>
         <button class="nes-btn is-primary" type="submit" name="submit">Continue</button>
     </form>
+    <a href="/logout">log out</a>
 </main>
