--- a/views/thanks.handlebars
+++ b/views/thanks.handlebars
@@ -1,5 +1,8 @@
 <main class="nes-container is-dark is-rounded is-centered with-title flex-center">
     <h1>Thanks!!</h1>
-    <a href="/signers">signers list</a>
     <img id="signature-img" src={{signature}}>
+    <a href="/signers">see all {{count}} signers</a>
+    <a href="/unsign">delete signature</a>
+    <a href="/profile">edit profile</a>
+    <a href="/logout">log out</a>
 </main>
