--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -7,8 +7,9 @@
     {{/if}}
     <form action="/login" method="post">
         <input class="nes-input" type="text" name="email" placeholder="Email Address" required>
-        <input class="nes-input" type="password" name="password" placeholder="Password" required>
+        <input class="nes-input " type="password" name="password" placeholder="Password" required>
         <input class="nes-input" type="hidden" name="_csrf" value={{csrfToken}}>
-        <button class="nes-btn is-primary" type="submit" name="submit">Log In</button>
+        <button class="nes-btn is-primary margin" type="submit" name="submit">Log In</button>
     </form>
+    <a class="margin" href="/registration">sign up</a>
 </main>
