--- a/views/signers.handlebars
+++ b/views/signers.handlebars
@@ -11,4 +11,6 @@
         {{/each}}
     </div>
     <a href="/thanks">back</a>
+    <a href="/profile">edit profile</a>
+    <a href="/logout">log out</a>
 </main>
