--- a/views/thanks.handlebars
+++ b/views/thanks.handlebars
@@ -3,6 +3,6 @@
     <img id="signature-img" src={{signature}}>
     <a href="/signers">see all {{count}} signers</a>
     <a href="/unsign">delete signature</a>
-    <a href="/profile">edit profile</a>
+    <a href="/edit">edit profile</a>
     <a href="/logout">log out</a>
 </main>
