--- a/views/petition.handlebars
+++ b/views/petition.handlebars
@@ -14,6 +14,7 @@
     <script src="/js/jquery-3.4.1.min.js" charset="utf-8"></script>
     <script src="/js/p5.min.js" charset="utf-8"></script>
     <script src="/js/signature.js" charset="utf-8"></script>
-    <a href="/profile">edit profile</a>
+    <a href="/edit">edit profile</a>
+    <br>
     <a href="/logout">log out</a>
 </main>
