--- a/views/registration.handlebars
+++ b/views/registration.handlebars
@@ -11,7 +11,7 @@
         <input class="nes-input" type="text" name="email" placeholder="Email Address" required>
         <input class="nes-input" type="password" name="password" placeholder="Password" required>
         <input class="nes-input" type="hidden" name="_csrf" value={{csrfToken}}>
-        <button class="nes-btn is-primary margin" type="submit" name="submit">lign ln</button>
+        <button class="nes-btn is-primary margin" type="submit" name="submit">Sign ln</button>
     </form>
     <a class="margin" href="/login">log ln</a>
 </main>
