--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -9,5 +9,7 @@
         <link rel="stylesheet" href="/css/characters.css">
         <link rel="stylesheet" href="/css/style.css">
     </head>
-    {{{body}}}
+    <main class="nes-container is-dark is-rounded is-centered with-title">
+        {{{body}}}
+    </main>
 </html>
