--- a/views/registration.handlebars
+++ b/views/registration.handlebars
@@ -1,17 +1,15 @@
-<main class="nes-container is-dark is-rounded is-centered with-title">
-    <p class="title">Save Ghosts from Pacman!</p>
-    {{> characters}}
-    {{> cause}}
-    {{#if error}}
-        {{> error}}
-    {{/if}}
-    <form action="/registration" method="post">
-        <input class="nes-input" type="text" name="first_name" placeholder="First Name" required>
-        <input class="nes-input" type="text" name="last_name" placeholder="Last Name" required>
-        <input class="nes-input" type="text" name="email" placeholder="Email Address" required>
-        <input class="nes-input" type="password" name="password" placeholder="Password" required>
-        <input class="nes-input" type="hidden" name="_csrf" value={{csrfToken}}>
-        <button class="nes-btn is-primary margin" type="submit" name="submit">Sign ln</button>
-    </form>
-    <a class="margin" href="/login">log ln</a>
-</main>
+<p class="title">Save Ghosts from Pacman!</p>
+{{> characters}}
+{{> cause}}
+{{#if error}}
+    {{> error}}
+{{/if}}
+<form action="/registration" method="post">
+    <input class="nes-input" type="text" name="first_name" placeholder="First Name" required>
+    <input class="nes-input" type="text" name="last_name" placeholder="Last Name" required>
+    <input class="nes-input" type="text" name="email" placeholder="Email Address" required>
+    <input class="nes-input" type="password" name="password" placeholder="Password" required>
+    <input class="nes-input" type="hidden" name="_csrf" value={{csrfToken}}>
+    <button class="nes-btn is-primary margin" type="submit" name="submit">Sign ln</button>
+</form>
+<div><a class="margin" href="/login">log ln</a></div>
